[gd_scene load_steps=2 format=2]

[ext_resource path="res://layout/track/layout_section_inspector.gd" type="Script" id=1]

[node name="LayoutSectionInspector" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 156.0
margin_bottom = 14.0
text = "Track segment selection"

[node name="CreateBlock" type="Button" parent="."]
margin_top = 18.0
margin_right = 156.0
margin_bottom = 38.0
text = "Create block"

[node name="AddSensor" type="Button" parent="."]
margin_top = 42.0
margin_right = 156.0
margin_bottom = 62.0
text = "Add sensor"

[node name="SensorPanel" type="PanelContainer" parent="."]
margin_top = 66.0
margin_right = 156.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="SensorPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 149.0
margin_bottom = 87.0

[node name="SensorInspector" type="VBoxContainer" parent="SensorPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 149.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SensorPanel/SensorInspector"]
margin_right = 142.0
margin_bottom = 14.0
text = "Sensor"

[node name="RemoveSensor" type="Button" parent="SensorPanel/SensorInspector"]
margin_top = 18.0
margin_right = 142.0
margin_bottom = 38.0
text = "Remove"

[node name="Label2" type="Label" parent="SensorPanel/SensorInspector"]
margin_top = 42.0
margin_right = 142.0
margin_bottom = 56.0
text = "Marker color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SensorPanel/SensorInspector"]
margin_top = 60.0
margin_right = 142.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarkerSelect" type="OptionButton" parent="SensorPanel/SensorInspector/HBoxContainer"]
margin_right = 142.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="CollectSegment" type="Button" parent="."]
margin_top = 164.0
margin_right = 156.0
margin_bottom = 184.0
text = "Collect segment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateBlockPopup" type="PopupPanel" parent="."]
margin_top = 66.0
margin_right = 123.0
margin_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="CreateBlockPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 119.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CreateBlockPopup/VBoxContainer"]
margin_right = 115.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Enter block name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameEdit" type="LineEdit" parent="CreateBlockPopup/VBoxContainer"]
margin_top = 18.0
margin_right = 115.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CreateBlockPopup/VBoxContainer"]
margin_top = 46.0
margin_right = 115.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockCancelButton" type="Button" parent="CreateBlockPopup/VBoxContainer/HBoxContainer"]
margin_right = 55.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockOKButton" type="Button" parent="CreateBlockPopup/VBoxContainer/HBoxContainer"]
margin_left = 59.0
margin_right = 115.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OK"

[connection signal="pressed" from="CreateBlock" to="." method="_on_CreateBlock_pressed"]
[connection signal="pressed" from="AddSensor" to="." method="_on_AddSensor_pressed"]
[connection signal="pressed" from="SensorPanel/SensorInspector/RemoveSensor" to="." method="_on_RemoveSensor_pressed"]
[connection signal="item_selected" from="SensorPanel/SensorInspector/HBoxContainer/MarkerSelect" to="." method="_on_MarkerSelect_item_selected"]
[connection signal="pressed" from="CollectSegment" to="." method="_on_CollectSegment_pressed"]
[connection signal="pressed" from="CreateBlockPopup/VBoxContainer/HBoxContainer/BlockCancelButton" to="." method="_on_BlockCancelButton_pressed"]
[connection signal="pressed" from="CreateBlockPopup/VBoxContainer/HBoxContainer/BlockOKButton" to="." method="_on_BlockOKButton_pressed"]
